be/be-deploy-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: be-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: be-deploy
  template:
    metadata:
      labels:
        app: be-deploy
    spec:
      containers:
      - name: be-deploy
        image:
        ports:
        - containerPort: 80	 ## 정보성
---
apiVersion: v1
kind: Service
metadata:
  name: be-svc
spec:
  type: ClusterIP
  selector:
    app: be-deploy
  ports:
  - protocol: TCP
    port: 8888
    targetPort:
